# lab1_ISofMA

./: CMakeLists.txt  README.md
inc/: archive_engine.h  file_access.h  gui.h
src/: archive_engine.cpp  file_access.cpp  gui.cpp  main.cpp
